--- a/css/ht_styles.css
+++ b/css/ht_styles.css
@@ -48,8 +48,8 @@
     font-size: 1.1rem;
 }
 
-.icon-size-6 {
-    width: 6rem;
+.icon-size-1-3 {
+    width: 1.3rem;
 }
 
 .icon-size-1-5 {
@@ -58,6 +58,10 @@
 
 .icon-size-2 {
     width: 2rem;
+}
+
+.icon-size-6 {
+    width: 6rem;
 }
 
 .border-purple {
