--- a/css/ht_styles.css
+++ b/css/ht_styles.css
@@ -48,6 +48,14 @@
     font-size: 1.1rem;
 }
 
+.font-light-ht {
+    font-weight: 350;
+}
+
+.font-dark-ht {
+    font-weight: 600;
+}
+
 .icon-size-1-3 {
     width: 1.3rem;
 }
@@ -58,6 +66,10 @@
 
 .icon-size-2 {
     width: 2rem;
+}
+
+.icon-size-3 {
+    width: 3rem;
 }
 
 .icon-size-6 {
