Adic. tela de login

--- a/css/ht_styles.css
+++ b/css/ht_styles.css
@@ -3,6 +3,10 @@
     color:#683696;
 }
 
+.body-bg-ht {
+    background-image: url(../img/race.png);
+}
+
 .btn-purple-ht {
     background-color: #683696;
     color: whitesmoke;
